kubernetes/01.services/01.ingress/app/00.namepace.yaml
# https://www.youtube.com/watch?v=pzFirwIpMag
# https://www.youtube.com/watch?v=NPFbYpb0I7w
apiVersion: v1
kind: Namespace
metadata:
  name: test-ingress
