kubernetes/01.services/01.ingress/app/03.hello-svc-v1.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v1-svc
  namespace: test-ingress
spec:
  selector:
    app: hello-v1
  ports:
    - port: 80
      targetPort: 8080
