kubernetes/01.services/01.ingress/app/04.hello-svc-v2.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v2-svc
  namespace: test-ingress
spec:
  selector:
    app: hello-v2
  ports:
    - port: 80
      targetPort: 8080
