kubernetes/01.services/01.ingress/app/05.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: test-ingress
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /v1
        pathType: Exact
        backend:
          service:
            name: hello-v1-svc
            port:
              number: 80
  - host: "localhost"
    http:
      paths:
      - path: /v2
        pathType: Exact
        backend:
          service:
            name: hello-v2-svc
            port:
              number: 80
         


# https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/
# La petición realizada para testear el ejercicio es: curl -v http://localhost:30020
# Para loopear una ejecución de llamados a una URL por línea de comandos utilizo: while(1) { Invoke-WebRequest -Uri http://128.199.52.139:30000/ };
# Info de como funciona Ingress https://kubernetes.io/docs/concepts/services-networking/service/#proxy-mode-ipvs
